# foundation

./: .gitignore  CLAUDE.md  build.sh  dune-project  foundation.opam  install.sh
.github/workflows/: foundation-check.yml
data/: example1  example2  sample_wff
lib/: dune  foundation.ml  kernel.ml  lexer.mll  parser.mly  rules.ml  types.ml
lib/utils/: errors.ml  fof_utils.ml  parser_utils.ml
test/: dune  test_main.ml  test_proof.ml  test_statement.ml
